# fiscus_simulate

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  HUMAN.md  README.md  human-hints.md  initial_ask.md  pyproject.toml
assets/branding/: README.md
dev/: TODO.md  plan-1.0-stage1-skeleton.md  plan-1.1-stage2-engine.md  plan-1.2-stage3-returns.md  plan-1.3-stage4.md  plan-1.4-stage5.md  plan-1.5-stage6.md  plan-1.6-stage7.md  plan-1.7-stage-details.md  plan-1.8-retired-config-preview.md  plan-1.9-sales-engine-account-walk.md  plan-overview.md
fixtures/: example_config.yaml
scripts/: benchmark.py  preview_report.py
src/fiscus_simulate/: __init__.py  assets.py  config.py  engine.py  income.py  models.py  preview.py  rates.py  rmd.py  savings.py  service.py  spending.py  storage.py  tax.py
src/fiscus_simulate/analysis/: __init__.py  sequence.py  summary.py
src/fiscus_simulate/returns/: __init__.py  base.py  deterministic.py  gbm.py
src/fiscus_simulate/web/: __init__.py  app.py  charts.py  configs.py  grid.py  jobs.py  routes.py  state.py  views.py
src/fiscus_simulate/web/templates/fiscus_simulate/: base.html  compare.html  config_edit.html  dashboard.html  job_status.html  run_detail.html  run_details.html  runs.html
tests/: test_config.py  test_details.py  test_engine.py  test_portability.py  test_preview.py  test_rates.py  test_returns.py  test_rmd.py  test_sales.py  test_service.py  test_storage.py  test_web.py  test_web_config.py
