[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiscus-simulate"
version = "1.5.3"
description = "Retirement cash-flow and asset Monte-Carlo simulation for a two-person household."
requires-python = ">=3.13"
authors = [{ name = "Stephen J. Mildenhall" }]
dependencies = [
    "numpy>=1.26",        # core engine arrays (lands with the engine, Stage 2)
    "pandas>=2.0",        # config/summary/output boundaries only
    "pyarrow>=15",        # parquet summaries (Stage 5)
    "pyyaml>=6",          # human-readable config
    "pydantic>=2",        # typed, validated, round-trippable config models
]

[project.optional-dependencies]
# Web layer is optional so the pure engine installs headless (e.g. compute node / VPS).
# csv-grid is on PyPI (the prod table renderer); the web pages degrade to a plain table
# only if it is somehow absent (see web/grid.py).
web = ["flask>=3", "waitress>=3", "csv-grid>=3"]
# dev includes csv-grid so tests exercise the real grid renderer.
dev = ["pytest>=8", "ruff>=0.4", "flask>=3", "waitress>=3", "csv-grid>=3"]

[project.scripts]
fiscus-simulate = "fiscus_simulate.web.app:main"

[tool.uv]
# .venv lives on the V: dev drive (junction) — a different filesystem, so uv's default
# hardlink mode falls back with a warning. Copy mode is correct here and portable.
link-mode = "copy"

[tool.hatch.build.targets.wheel]
packages = ["src/fiscus_simulate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
